# squick

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  RELEASING.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  dist-workspace.toml  readme.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml  supply-chain.yml
benches/roi/: README.md  measure.py
bindings/node/: Cargo.toml  README.md  build.rs  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
crates/squick-cli/: Cargo.toml
crates/squick-cli/dictionaries/components/: ui-patterns.yaml
crates/squick-cli/dictionaries/files/: node.yaml  python.yaml
crates/squick-cli/dictionaries/frameworks/: express.yaml  flask.yaml  react.yaml  sanity.yaml  symfony.yaml  wordpress.yaml
crates/squick-cli/dictionaries/naming/: python.yaml  suffixes.yaml  verbs.yaml
crates/squick-cli/src/: main.rs  mcp.rs
crates/squick-core/: Cargo.toml
crates/squick-core/src/: docker.rs  error.rs  extract.rs  graph.rs  language.rs  lib.rs  manifest.rs  parser.rs  resolve.rs  scanner.rs  types.rs
crates/squick-dict/: Cargo.toml
crates/squick-dict/src/: lib.rs  loader.rs  matcher.rs  types.rs
crates/squick-format/: Cargo.toml
crates/squick-format/src/: areas.rs  compact.rs  conventions.rs  json.rs  lib.rs  markdown.rs  ndjson.rs  schemas.rs  triples.rs
crates/squick-format/tests/: fixtures.rs
crates/squick-watch/: Cargo.toml
crates/squick-watch/src/: lib.rs
dictionaries/components/: html-semantic.yaml
dictionaries/frameworks/: django.yaml  fastapi.yaml  laravel.yaml  nextjs.yaml  payload.yaml  react.yaml  strapi.yaml
dictionaries/routes/: web-common.yaml
extensions/vscode/: .vscodeignore  README.md  package.json
extensions/vscode/src/: extension.ts
fixtures/monorepo/: docker-compose.yml
fixtures/monorepo/backend/: Dockerfile  main.py  pyproject.toml
fixtures/monorepo/backend/plugins/audit/: index.ts  package.json
fixtures/monorepo/frontend/: package.json
fixtures/monorepo/frontend/app/: page.tsx
fixtures/monorepo/frontend/components/: ProductList.tsx
fixtures/monorepo/scripts/: seed.py
fixtures/multi-framework/: Dockerfile  composer.json  django_urls.py  docker-compose.yml  express_app.js  fastapi_app.py  package.json  pyproject.toml
fixtures/multi-framework/app/Http/Controllers/: UserController.php
fixtures/multi-framework/routes/: web.php
fixtures/sample/: App.tsx  Navbar.tsx  urls.py  views.py
wrappers/npm/squick/: README.md  package.json
wrappers/pypi/: README.md  pyproject.toml
wrappers/pypi/src/squick/: __init__.py  __main__.py
