[workspace]
resolver = "2"
members = [
    "crates/squick-core",
    "crates/squick-dict",
    "crates/squick-format",
    "crates/squick-watch",
    "crates/squick-cli",
]
# The Node (napi-rs) and Python (PyO3) bindings have platform-specific
# linker requirements that break `cargo build --workspace` on CI macOS
# runners. They live outside the workspace and are built by their own
# tooling (napi build / maturin develop).
exclude = [
    "bindings/node",
    "bindings/python",
]

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Hub Horizon LLC"]
repository = "https://github.com/pwnaxe/squick"
homepage = "https://pixelhorizon.dev"
rust-version = "1.88"

[workspace.dependencies]
squick-core = { path = "crates/squick-core", version = "=1.3.0" }
squick-dict = { path = "crates/squick-dict", version = "=1.3.0" }
squick-format = { path = "crates/squick-format", version = "=1.3.0" }
squick-watch = { path = "crates/squick-watch", version = "=1.3.0" }

anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1"
walkdir = "2"
ignore = "0.4"
regex = "1"
once_cell = "1"
petgraph = "0.6"
clap = { version = "4", features = ["derive"] }
notify = "6"
notify-debouncer-mini = "0.4"
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-php = "0.22"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
