[package]
name = "squick-node"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Horizon LLC"]
repository = "https://github.com/pwnaxe/squick"
rust-version = "1.80"
description = "Node.js (napi-rs) bindings for Squick"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
squick-core = { path = "../../crates/squick-core", version = "=1.0.1" }
squick-format = { path = "../../crates/squick-format", version = "=1.0.1" }
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
