[package]
name = "squick-python"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Horizon LLC"]
repository = "https://github.com/pwnaxe/squick"
rust-version = "1.80"
description = "Python (PyO3) bindings for Squick"
publish = false

[lib]
name = "squick"
crate-type = ["cdylib"]

[dependencies]
squick-core = { path = "../../crates/squick-core", version = "=1.0.1" }
squick-format = { path = "../../crates/squick-format", version = "=1.0.1" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
