[package]
name = "squick-dict"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "YAML pattern dictionary engine for Squick: framework and convention recognition without LLM calls."
readme = "../../readme.md"
keywords = ["mcp", "ai", "yaml", "patterns", "framework"]
categories = ["development-tools"]

[dependencies]
squick-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
walkdir.workspace = true
regex.workspace = true
once_cell.workspace = true
